[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = "0.14"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors","trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "sqlite"] }
oauth-client = "0.5"
url = "2.5.4"
urlencoding = "2.1.3"
